chart/learner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-deployment
  namespace: chou-pruebas
  labels:
    app: learner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner
  template:
    metadata:
      labels:
        app: learner
    spec:
      containers:
      - name: learner
        image: schouhy/minitchess-alphazero:1
        command: ["python", "-m", "app.learner"]
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: flask
          protocol: TCP
