chart/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-deployment
  namespace: chou-pruebas
  labels:
    app: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
      - name: master
        image: schouhy/minitchess-alphazero:1
        command: ["python", "-m", "app.master"]
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: flask
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minitchess-simplealphazero-pvc
