chart/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-deployment
  namespace: chou-pruebas
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        imagePullPolicy: Always
        ports:
        - containerPort: 1883
          name: port1
        - containerPort: 9001
          name: port2
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
        - name: passwd-volume
          mountPath: /mosquitto/config/passwd
          subPath: passwd
          readOnly: true
          #         volumeMounts:
          #         - mountPath: /mosquitto/config/mosquitto.conf
          #           subPath: mosquitto.conf
          #           name: data 
          #         - mountPath: /mosquitto/config/passwd
          #           subPath: mosquitto_passwd
          #           name: data
      volumes:
      - name: config-volume
        configMap:
          name: mosquitto-config 
      - name: passwd-volume
        secret:
          secretName: mosquitto-passwd
