chart/puppet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppet-deployment
  namespace: chou-pruebas
  labels:
    app: puppet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: puppet
  template:
    metadata:
      labels:
        app: puppet
    spec:
      containers:
      - name: puppet
        image: schouhy/minitchess-alphazero:1
        command: ["python", "-m", "app.puppet"]
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: flask
          protocol: TCP
