chart/slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slave-deployment
  namespace: chou-pruebas
  labels:
    app: slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: slave
  template:
    metadata:
      labels:
        app: slave
    spec:
      containers:
      - name: slave
        image: schouhy/minitchess-alphazero:1
        command: ["python", "-m", "app.slave"]
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: flask
          protocol: TCP
