chart/master-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-flask-service
  namespace: chou-pruebas
spec:
  type: LoadBalancer
  selector:
    app: master
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
