chart/rlweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rlweb
  namespace: chou-pruebas
spec:
  selector:
    app: rlweb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
